src/objects/Aircraft__c.object
<CustomObject>
    <fields>
        <fullName>Access_Luggage_from_Cabin__c</fullName>
        <label>Access Luggage from Cabin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Fee_for_Pets__c</fullName>
        <label>Additional Fee for Pets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Age_Range__c</fullName>
        <formula>IF(VALUE(Year_of_Manufacture__c) &lt;1980, &quot;1979 and Older&quot;,
IF(AND(VALUE(Year_of_Manufacture__c)  &gt;= 1980, VALUE(Year_of_Manufacture__c) &lt; 1990), &quot;1980-1989&quot;,
IF(AND(VALUE(Year_of_Manufacture__c)  &gt;= 1990, VALUE(Year_of_Manufacture__c) &lt; 2000), &quot;1990-1999&quot;,  
IF(AND(VALUE(Year_of_Manufacture__c)  &gt;= 2000, VALUE(Year_of_Manufacture__c) &lt; 2010), &quot;2000-2009&quot;,
IF(VALUE(Year_of_Manufacture__c)  &gt;=2010, &quot;2010 to Present&quot;,&quot;NA&quot;
                    )
                )
            )
        )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Age Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Age__c</fullName>
        <formula>YEAR(TODAY()) -  VALUE(Year_of_Manufacture__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Homebase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Homebase</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Aircrafts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Aircraft</relationshipLabel>
        <relationshipName>Aircraft</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Status__c</fullName>
        <label>Aircraft Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Blacklisted</fullName>
                </value>
                <value>
                    <fullName>Temp Inactive - Due to Incident</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <label>Aircraft Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Restrictions__c</fullName>
        <label>Airport Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airshow__c</fullName>
        <label>Airshow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvP_Client_Plane__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AvP Client Plane</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Belted_Lavatory__c</fullName>
        <label>Belted Lavatory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabin_Floor__c</fullName>
        <label>Cabin Floor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Floor</fullName>
                </value>
                <value>
                    <fullName>Drop Floor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabin_Height_ft__c</fullName>
        <inlineHelpText>Numeric Only - one decimal point (e.g., 6.2, 5.4)</inlineHelpText>
        <label>Cabin Height (ft)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cabin_Length_ft__c</fullName>
        <inlineHelpText>Numeric Only - one decimal point (e.g., 50.2, 45.0)</inlineHelpText>
        <label>Cabin Length (ft)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cabin_Type__c</fullName>
        <label>Cabin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cabin_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabin_Volume_cu_ft__c</fullName>
        <inlineHelpText>Numeric Only - one decimal point (e.g., 324.5, 1450.0)</inlineHelpText>
        <label>Cabin Volume (cu ft)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cabin_Width_ft__c</fullName>
        <inlineHelpText>Numeric Only - one decimal point (e.g., 7.3, 6.4)</inlineHelpText>
        <label>Cabin Width (ft)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Sign__c</fullName>
        <label>Call Sign</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_be_flown_with_one_pilot__c</fullName>
        <label>Can be flown with one pilot?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_Crew_Rest_Area__c</fullName>
        <label>Certified Crew Rest Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convection_Oven__c</fullName>
        <label>Convection Oven</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DVD_Player__c</fullName>
        <label>DVD Player</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Minimums_Required__c</fullName>
        <label>Daily Minimums Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details_of_Refurb__c</fullName>
        <label>Details of Refurb</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Difficult_to_Receive_Owner_Approval__c</fullName>
        <label>Difficult to Receive Owner Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DirecTV__c</fullName>
        <label>DirecTV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Pilots_Have_ATP__c</fullName>
        <label>Do Pilots Have ATP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Aircraft_have_a_dedicated_crew__c</fullName>
        <label>Does Aircraft have a dedicated crew?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enclosed_Lavatory__c</fullName>
        <label>Enclosed Lavatory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <label>Engine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jet Engine</fullName>
                </value>
                <value>
                    <fullName>Turbo Prop</fullName>
                </value>
                <value>
                    <fullName>Piston</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipped_with_TCAS1__c</fullName>
        <label>Equipped with TCAS1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipped_with_TCAS2__c</fullName>
        <label>Equipped with TCAS2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Luggage_Storage_cu_ft__c</fullName>
        <label>External Luggage Storage (cu ft)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flight_Attendant_Jump_Seat_Certified__c</fullName>
        <label>Flight Attendant Jump Seat Certified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Attendant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight Attendant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Aircraft (Flight Attendant)</relationshipLabel>
        <relationshipName>Aircraft3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Attendant_Onboard__c</fullName>
        <label>Flight Attendant Onboard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Attendant_Required__c</fullName>
        <label>Flight Attendant Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Aware_Link__c</fullName>
        <label>Flight Aware Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flight_Range__c</fullName>
        <label>Flight Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Mid Range</fullName>
                </value>
                <value>
                    <fullName>Coast to Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floating_Homebase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floating Homebase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuel_Hourly_Rate__c</fullName>
        <inlineHelpText>Used for Market Intel; Is not in Formula above for Total Hourly Rate</inlineHelpText>
        <label>Fuel Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fuel_Surcharge__c</fullName>
        <label>Fuel Surcharge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Galley_Location__c</fullName>
        <label>Galley Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forward Galley</fullName>
                </value>
                <value>
                    <fullName>Rear Galley</fullName>
                </value>
                <value>
                    <fullName>Forward &amp; Rear Galley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Aircraft_Failed_Safety_Audit__c</fullName>
        <label>Has Aircraft Failed Safety Audit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Crew_Failed_Safety_Audit__c</fullName>
        <label>Has Crew Failed Safety Audit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMPORTANT_NOTES__c</fullName>
        <label>IMPORTANT AIRCRAFT NOTES</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Description__c</fullName>
        <label>Incident Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Luggage_Storage_cu_ft__c</fullName>
        <label>Internal Luggage Storage (cu ft)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_Certified__c</fullName>
        <label>International Certified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Overflight_Certified__c</fullName>
        <label>International Overflight Certified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Involved_in_Aircraft_Incident__c</fullName>
        <label>Involved in Aircraft Incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Exterior_Refurb__c</fullName>
        <label>Last Exterior Refurb</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Interior_Refurb__c</fullName>
        <label>Last Interior Refurb</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Maintenance_Check__c</fullName>
        <label>Last Maintenance Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Amount__c</fullName>
        <label>Liability Insurance Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$10mm</fullName>
                </value>
                <value>
                    <fullName>$20mm</fullName>
                </value>
                <value>
                    <fullName>$25mm</fullName>
                </value>
                <value>
                    <fullName>$50mm</fullName>
                </value>
                <value>
                    <fullName>$60mm</fullName>
                </value>
                <value>
                    <fullName>$65mm</fullName>
                </value>
                <value>
                    <fullName>$75mm</fullName>
                </value>
                <value>
                    <fullName>$100mm</fullName>
                </value>
                <value>
                    <fullName>$105mm</fullName>
                </value>
                <value>
                    <fullName>$125mm</fullName>
                </value>
                <value>
                    <fullName>$135mm</fullName>
                </value>
                <value>
                    <fullName>$150mm</fullName>
                </value>
                <value>
                    <fullName>$175mm</fullName>
                </value>
                <value>
                    <fullName>$200mm</fullName>
                </value>
                <value>
                    <fullName>$225mm</fullName>
                </value>
                <value>
                    <fullName>$250mm</fullName>
                </value>
                <value>
                    <fullName>$275mm</fullName>
                </value>
                <value>
                    <fullName>$300mm</fullName>
                </value>
                <value>
                    <fullName>$325mm</fullName>
                </value>
                <value>
                    <fullName>$350mm</fullName>
                </value>
                <value>
                    <fullName>$375mm</fullName>
                </value>
                <value>
                    <fullName>$400mm</fullName>
                </value>
                <value>
                    <fullName>$425mm</fullName>
                </value>
                <value>
                    <fullName>$450mm</fullName>
                </value>
                <value>
                    <fullName>$475mm</fullName>
                </value>
                <value>
                    <fullName>$500mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Expiration__c</fullName>
        <label>Liability Insurance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Limited_Luggage_Storage__c</fullName>
        <label>Limited Luggage Storage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limited_Range_in_High_Elev_Temps__c</fullName>
        <label>Limited Range in High Elev. &amp; Temps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Photos__c</fullName>
        <label>Link to Photos</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Max_Cruise_Altitude_ft__c</fullName>
        <label>Max Cruise Altitude (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Cruise_Speed_mph__c</fullName>
        <label>Max Cruise Speed (mph)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Flight_Hours__c</fullName>
        <label>Max Flight Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Pass_w_Flt_Attendant_No_Jump_Seat__c</fullName>
        <label>Max Pass w/ Flt Attendant &amp; No Jump Seat</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Passengers_with_Belted_Lavatory__c</fullName>
        <label>Max Passengers with Belted Lavatory</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Range_Full_Capacity_nm__c</fullName>
        <label>Max Range Full Capacity (nm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Range_Minimal_Capacity_nm__c</fullName>
        <label>Max Range Minimal Capacity (nm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_of_Flat_Beds__c</fullName>
        <label>Max # of Flat Beds</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Microwave__c</fullName>
        <label>Microwave</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboard_Movie_Database__c</fullName>
        <label>Onboard Movie Database</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Owned_Leased__c</fullName>
        <label>Operator Owned/Leased</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Tail_Number__c</fullName>
        <formula>Operator__r.Name &amp;&quot; - &quot;&amp;Name</formula>
        <label>Operator &amp; Tail Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aircraft (Operator)</relationshipLabel>
        <relationshipName>Aircraft</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner_Approval_Notes__c</fullName>
        <label>Owner Approval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Approval_Required__c</fullName>
        <label>Owner Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PIC Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Aircraft (PIC)</relationshipLabel>
        <relationshipName>Aircraft1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_91_Only__c</fullName>
        <inlineHelpText>Is this aircraft operated under 91 only and NOT charter 135?</inlineHelpText>
        <label>Part 91 Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passenger_Count_Restrictions__c</fullName>
        <label>Passenger Count Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Seats__c</fullName>
        <label>Passenger Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pets_in_Cabin__c</fullName>
        <label>Pets in Cabin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes in Crate Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <description>Distinguish between published standard hourly rate vs. dynamic pricing model where we calculated an average rate based on our SF data</description>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Wine__c</fullName>
        <label>Red Wine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Hourly_Rate__c</fullName>
        <label>Retail Hourly Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SIC Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Aircraft (SIC)</relationshipLabel>
        <relationshipName>Aircraft2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Satellite_Phone__c</fullName>
        <label>Satellite Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satellite_TV__c</fullName>
        <label>Satellite TV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seating_Configuration_Notes__c</fullName>
        <label>Seating Configuration Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>